=== fitdistrplus : Help to fit of a parametric distribution ===

Version 0.1-5
=============

NEW FEATURES
- 
- a new fitting method has been implemented : the quantile matching estimation (function "qmedist"). 
For the moment, only available for non censored data.
- the moment matching estimation has been extended (in function mmedist) to enable numerical 
matching when closed formula are not available.

BUG FIXES

- correction of a bug inserted while adding the argument "fix.arg" which prevent the print of the
results of goodness-of-fit tests .


Version 0.1-4
=============

NEW FEATURES
- a component named dots added to the list returned by fitdist and fitdistcens in order to pass optional arguments
for the control of optimization in mledist to bootdist and bootdistcens. bootdist and bootdistcens
changed to take into account these optional arguments if they are defined in the call to fitdist or fitdistcens.
- an argument added to fitdist, fitdistcens and mledist, named fix.arg, and giving the possibility to fix some
of the distribution parameters while maximizing the likelihood. Functions bootdist, bootdistcens and gofstat were also
changed in order to take this new argument into account.
- a new data file of bacterial contamination censored data extracted from Busschaert et al. 2000 and examples 
corresponding to analysis of this dataset. 

BUG FIXES

- correction of a bug in the print and the plot of boostraped samples using bootdist or bootdistcens
when there was only one parameter estimated by maximum likelihood.

Version 0.1-3
=============

NEW FEATURES
- new data file "groundbeef" (groundbeef.rda and groundbeef.Rd) and new use of this dataset in some examples.
- new function gofstat. 
    Goodness-of-fit statistics are no more computed by fitdist but may computed and printed
    by the use of the function gofstat. In this new function, the whole results computed are not printed :